# causal_pool_training

./: .env  .gitignore  README.md  debug.py  pyproject.toml  pytest.ini
.cursor/rules/: general.mdc
causal_pool/: utils.py
causal_pool/data/: dataset_utils.py
causal_pool/eval/: eval.py  eval_utils.py
causal_pool/sft/: custom_trainer.py  train.py
eval/: __init__.py  eval.py  eval_explore.ipynb  eval_utils.py  plot_category_metrics.py
notebooks/: eval_explore.ipynb
results/1k_simple/: eval_causalpool_4b.json  eval_qwen3_vl_8b_instruct.json  eval_random.json
scripts/: auto_eval.py  find_bad_videos.py  merge_lora_ckpt.py  process_dataset.py  run_eval.sh  sft.sh
sft/: custom_trainer.py  explore.ipynb  prompt_utils.py  train.py
tests/: README.md  __init__.py  conftest.py  manual_test_gather_test_dataset.py  test_dataset_utils.py  test_eval.py
