[project]
name = "causal-pool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "qwen-vl-utils>=0.0.14",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "trl[peft]>=0.25.1",
    "wandb>=0.23.0",
]
